# platform-with-dashboards

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  coverage_cicd.py  pyproject.toml
.github/workflows/: ci.yml
apps/core/: apps.py
apps/dashboards/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/dashboards/migrations/: 0001_initial.py  0002_alter_widget_chart_type.py
apps/dashboards/tests/: conftest.py  test_services.py  test_views.py
apps/datasets/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/datasets/migrations/: 0001_initial.py  0002_alter_datasetrow_options_and_more.py  0003_alter_dataset_options.py  0004_alter_dataset_options.py  0005_dataset_columns.py
apps/datasets/tests/: conftest.py  test_services.py  test_tasks.py  test_views.py
apps/notifications/: tasks.py
apps/notifications/tests/: test_tasks.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_and_more.py  0003_alter_user_managers.py  0004_alter_user_managers.py
apps/users/tests/: test_models.py  test_views.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py
services/: dataset_utils.py
