[project]
name = "platformwithdashboards"
version = "0.6.0"
description = ""
authors = [
    {name = "Egor Sezen",email = "sezen.egor@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==6.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (>=25.2,<26.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "requests (>=2.32.5,<3.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "drf-nested-routers (>=0.95.0,<0.96.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.4,<0.16.0"
pytest = ">=9.0.2,<10.0.0"
pytest-django = ">=4.12.0,<5.0.0"
django-extensions = ">=4.1,<5.0"
coverage = ">=7.13.4,<8.0.0"
factory-boy = ">=3.3.3,<4.0.0"
django-debug-toolbar = ">=6.2.0,<7.0.0"
pre-commit = ">=4.5.1,<5.0.0"
bandit = "^1.9.4"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (неиспользуемые импорты и тд)
    "I",   # isort (сортировка импортов)
    "DJ",  # django-specific правила
]
ignore = ["E501"]  # длина строки — black сам следит

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "manage.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
